--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
@@ -19,7 +21,9 @@
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
     "jquery": "^3.3.1",
+    "less": "^3.12.2",
     "npm": "^6.14.6",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "sass": "^1.26.10"
   }
 }
