--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.2.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
     "parallelshell": "^3.0.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
@@ -31,6 +37,7 @@
     "copyfiles": "^2.3.0",
     "cssmin": "^0.4.3",
     "font-awesome": "^4.7.0",
+    "grunt-cli": "^1.3.2",
     "htmlmin": "0.0.7",
     "imagemin": "^7.0.1",
     "imagemin-cli": "^6.0.0",
